src/styles/index.css
.hero-container {
    background-color: #EFB8D6;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between; /* Cela sépare les éléments enfants : un au haut, un au milieu, un au bas */
}

.grid {
    display: flex;
    flex-direction: row;
    justify-content: center; 
    align-items: center; 
    height: calc(100vh - 60px); 
    margin: 0 auto; 
    gap: 100%;
}

.link-photo, .link-video {
    text-align: center;
    margin: 20px 0; 
}

.link-photo a, .link-video a {
    color: white;
    font-size:calc(40px + 3.5vw);
}

.name {
    text-align: center;
    font-size:calc(16px + 1.5vw);
    color: white;
    margin-top: auto;
    margin-bottom: 20px; 
}

@media (max-width: 500px) {
    .grid {
        gap: 60%;
    }
    .link-photo a, .link-video a {
        font-size:calc(20px + 3.5vw);
    }
  }
  

